adding extra apis to googleplaces configuration yaml

--- a/googleplaces.yaml
+++ b/googleplaces.yaml
@@ -3,8 +3,7 @@ base_url : "https://maps.googleapis.com/maps/api/place"
 apis :
  Places :
    url : "/nearbysearch/json"
-   action : "GET"
-   args :
+   GET :
      key:
      location  : { default : null }
      radius    : { default : null }
@@ -18,12 +17,44 @@ apis :
      types     : { default : null }
      pagetoken : { default : null }
      zagatselected : { default : null }
+   POST :
+     key : { location : args }
+     accuracy :
+     name :
+     address : { default : null }
+     language : { default : null }
+     location :
+     phone_number : { default : null }
+     types :
+     website :
+   DELETE :
+     key  :
+     place_id :
  Details :
    url : "/details/json"
-   action : "GET"
-   args :
-     key :
+   GET  :
+     key : { location : args }
      placeid :
      reference  : { default : null }
      extensions : { default : null }
+     language   : { default : null }
+ PlacesAutoComplete :
+   url : "autocomplete/json"
+   GET :
+     key : { location : args }
+     input :
+     offset     : { default : null }
+     location   : { default : null }
+     radius     : { default : null }
+     types      : { default : null }
+     language   : { default : null }
+     components : { default : null }
+ QueryAutoComplete :
+   url : "queryautocomplete/json"
+   GET :
+     key :
+     input :
+     offset     : { default : null }
+     location   : { default : null }
+     radius     : { default : null }
      language   : { default : null }
